--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@ img{
 /* NAV MENU */
 .col{
     float: left;
-    margin: 10px 25px;
 }
 .col-right{
     float: right;
@@ -48,7 +47,7 @@ img{
 }
 .menu-top {
     list-style-type: none;
-    margin: 20px 0;
+    margin: 20px 40px;
 }
 .menu-top li{
     display: inline-block;
@@ -91,11 +90,11 @@ img{
 }
 /* LOGO */
 .logo{
-    width: 10%;
+    width: 7%;
 }
 .logo img{
     vertical-align: middle;
-    margin: 20px 15px;
+    margin: 17px 15px;
 }
 
 /* MAIN */
@@ -205,7 +204,7 @@ div.cont-col h3 {
     text-align: center;
 }
 .col-plans {
-    width: 26%;
+    width: 30%;
     margin-top: 20px;
     border: 1px solid lightgray;
     height: 900px;
@@ -261,17 +260,17 @@ h5{
 
 /* ENTERPRISE */
 .contain-enterprise {
-    margin-top: 5%;
+    margin-top: 50px;
     border: 1px solid lightgray;
 }
 .contain-enterprise div:first-child {
     border-bottom: 1px solid lightgray;
     text-align: center;
-    padding: 1%;
+    padding: 10px;
     margin-bottom: 3%;
 }
 .enterprise {
-    width: 95%;
+    width: 70%;
     margin: auto;
     padding-left: 10px;
     
@@ -281,6 +280,7 @@ h5{
 }
 .enterprise h3 {
     margin-bottom: 2%;
+    margin-left: 50px;
 }
 .enterprise h5, p {
     margin-top: 15px;
@@ -297,7 +297,6 @@ h5{
 /* Section 2 */
 .contain-guy {
     margin-top: 10%
-
 }
 .col-img {
     width: 55%;
@@ -312,4 +311,176 @@ h5{
 }
 .col-text p {
     margin-bottom: 8%;
+}
+.col-text h3{
+    margin-left: 50px;
+}
+
+.col-text a{
+    margin-left: 50px;
+}
+
+/* Section 3 */
+
+/* FIRST ROW */
+.contain-operations{
+    width: 100%;
+}
+
+.contain-operations h2 {
+    margin-top: 10%;
+}
+.col-operations, .col-operations-center {
+    width: 30%;
+    margin-top: 2%;
+}
+.col-operations-center {
+    margin-left: 5%;
+    margin-right: 5%;
+}
+.margin-operations-h3 {
+    margin-bottom: 5%;
+    text-align: center;
+}
+
+.txt-12{
+    padding-right: 30px;
+    text-align: left;
+    font-size: 12px;
+}
+
+/* SECOND ROW */
+.second-row-operations {
+    margin-top: 7%;
+}
+
+/* TEAM USED DROPBOX */
+.people{
+    padding-left: 200px;
+}
+
+.people a{
+    padding: 20px 0;
+}
+
+
+/* ADVERTISING AND SPONSOR */
+
+.col-log{
+    width: 400px;
+    height: 400px;
+    margin: 50px 0; 
+}
+.col-tex{
+    width: calc(100% - 800px);
+    margin: 50px 0;
+    height: 400px;
+}
+
+.box{
+    width: 200px;
+    height: 200px;
+}
+
+/* IMAGE ADVERTISING */
+.green{
+    position: relative;
+    background-color: #a2d39b;
+    width: 200px;
+    height: 200px;
+    float: left;
+    border: 10px solid #d0e9cd;
+}
+
+.arizona{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    float: left;
+    background-color: #61082b;
+}
+
+.florida{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    float: left;
+    background-color: #0093ce;
+}
+
+.topps{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    float: left;
+    background-color: #ff1c1c;
+}
+
+.wbr{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    float: left;
+    background-color: #d5001f;
+}
+
+.hearst{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    float: left;
+    background-color: #b4d0e7;
+}
+
+.lonely{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    float: left;
+    background-color: #0d2481;
+}
+
+.clear{
+    position: relative;
+    width: 200px;
+    height: 200px;
+    float: left;
+    background-color: #ffd830;
+}
+
+.img-logo{
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 150px;
+    filter: invert(100);
+}
+
+.designit-container{
+    padding-top: 50px;
+    padding-left: 50px;
+    height: 180px;
+    width: 180px;
+}
+
+/* BANNER MAIN */
+.bck-main-aqua{
+    background-color: #b4d0e7;
+    width: 100%;
+    height: 300px;
+}
+
+.cta h2{
+    color: #61082b;
+}
+.cta{
+    width: 40%;
+    margin: auto;
+}
+
+.cta a{
+    float: right;
 }
