--- a/css/style.css
+++ b/css/style.css
@@ -532,20 +532,43 @@ h5{
 
 /* FOOTER */
 .container-footer{
-    width: 100%;
+    width: 70%;
     margin: auto;
 }
-
-.footer-menu{
-    color: white;
-    margin: 40px 0;
+footer{
     background-color: black;
 }
+.footer-menu{
+    color: white;
+    margin: 20px 30px;
+    line-height: 40px;
+}
 
+
+.footer-menu ul li{
+    list-style-type: none;
+}
 
 .footer-menu li a{
     text-decoration: none;
-    line-height: 40px;
+    line-height: 10px;
     color: white;
-    text-decoration: none;
+    list-style-type: none;
+    font-size: 15px;
+}
+
+.col .footer-menu{
+    width: 20%;
+}
+
+.orizontal-rules-footer{
+    border: 1px solid lightgray;
+    width: 100px;
+    margin-left: 60px;
+}
+.world{
+    color: #999999;
+    margin-top: 60px;
+    margin-left: 60px;
+
 }
